# controllers/rentercontroller/renter_controller.go
@@ -17,7 +17,7 @@ type RenterController struct {
 // @Param	body		body 	models.Renter	true		"body for user content"
 // @Success 200 {int} models.UserID
 // @Failure 403 body is empty
-// @router /sign-up [post]
+// @router /sign-up/ [post]
 func (u *RenterController) Post() {
 	var ob models.Renter
 	err := json.Unmarshal(u.Ctx.Input.RequestBody, &ob)
@@ -31,6 +31,28 @@ func (u *RenterController) Post() {
 		return
 	}
 	u.Data["json"] = "success"
+	u.ServeJSON()
+}
+
+// @Title CreateRenter
+// @Description create users
+// @Param	login		body 	models.RenterLogin	true		"body for user content"
+// @Success 200 {int} models.UserID
+// @Failure 403 body is empty
+// @router /login/ [post]
+func (u *RenterController) Login() {
+	var ob models.RenterLogin
+	err := json.Unmarshal(u.Ctx.Input.RequestBody, &ob)
+	if err != nil {
+		u.Ctx.WriteString(err.Error())
+		return
+	}
+	token, err := renterservices.LoginRenter(ob)
+	if err != nil {
+		u.Ctx.WriteString(err.Error())
+		return
+	}
+	u.Data["json"] = token
 	u.ServeJSON()
 }
 
@@ -53,7 +75,7 @@ func (u *RenterController) GetAll() {
 // @Param	renter-id		path 	string	true		"The key for staticblock"
 // @Success 200 {object} models.Renter
 // @Failure 403 :renter-id is empty
-// @router /:renter-id [get]
+// @router /:renter-id/ [get]
 func (u *RenterController) Get() {
 	id := u.Ctx.Input.Param(":renter-id")
 	if id != "" {
@@ -73,7 +95,7 @@ func (u *RenterController) Get() {
 // @Param	body		body 	models.Renter	true		"body for user content"
 // @Success 200 {object} models.User
 // @Failure 403 :renter-id is not int
-// @router /:renter-id [put]
+// @router /:renter-id/ [put]
 func (u *RenterController) Put() {
 	id := u.Ctx.Input.Param(":renter-id")
 	if id != "" {
@@ -98,7 +120,7 @@ func (u *RenterController) Put() {
 // @Param	renter-id		path 	string	true		"The uid you want to delete"
 // @Success 200 {string} delete success!
 // @Failure 403 uid is empty
-// @router /:renter-id [delete]
+// @router /:renter-id/ [delete]
 func (u *RenterController) Delete() {
 	id := u.GetString(":renter-id")
 	err := renterservices.DeleteRenter(id)
