# routers/commentsRouter_controllers.go
@@ -1,55 +1,0 @@
-package routers
-
-import (
-	"github.com/astaxie/beego"
-	"github.com/astaxie/beego/context/param"
-)
-
-func init() {
-
-    beego.GlobalControllerRouter["rent-house/controllers:UserController"] = append(beego.GlobalControllerRouter["rent-house/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Post",
-            Router: "/",
-            AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["rent-house/controllers:UserController"] = append(beego.GlobalControllerRouter["rent-house/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "GetAll",
-            Router: "/",
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["rent-house/controllers:UserController"] = append(beego.GlobalControllerRouter["rent-house/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Get",
-            Router: "/:uid",
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["rent-house/controllers:UserController"] = append(beego.GlobalControllerRouter["rent-house/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Put",
-            Router: "/:uid",
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["rent-house/controllers:UserController"] = append(beego.GlobalControllerRouter["rent-house/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Delete",
-            Router: "/:uid",
-            AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-}
